--- a/foundations/cascade/01-cascade-fix/style.css
+++ b/foundations/cascade/01-cascade-fix/style.css
@@ -1,6 +1,10 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
-}
+   font-family: Arial, Helvetica, sans-serif;
+ }
+
+.para {
+   font-size: 22px;
+ }
 
 .para,
 .small-para {
@@ -13,30 +17,28 @@ body {
   font-weight: 800;
 }
 
-.para {
-  font-size: 22px;
-}
-
+.button {
+   background-color: rgb(255, 255, 255);
+   color: rgb(0, 0, 0);
+   font-size: 20px;
+ }
+ 
 .confirm {
   background: green;
   color: white;
   font-weight: bold;
 } 
 
-.button {
-  background-color: rgb(255, 255, 255);
-  color: rgb(0, 0, 0);
-  font-size: 20px;
-}
+div.text {
+   color: rgb(0, 0, 0);
+   font-size: 22px;
+   font-weight: 100;
+ }
 
-.child {
+div .child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
 }
 
-div.text {
-  color: rgb(0, 0, 0);
-  font-size: 22px;
-  font-weight: 100;
-}
+
