--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,11 @@
 .header  {
+  display: flex;
   font-family: monospace;
   background: papayawhip;
+  align-items: center;
+  flex: 1 1 0%;
+  justify-content: space-between;
+  
 }
 
 .logo {
@@ -9,11 +14,16 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 8px;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  
+  display: flex;
+  justify-content: space-between;
+  padding-left: 0px;
 }
 
 a {
@@ -22,4 +32,10 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+  margin: 10px;
+  color: blue;
 }
+
+
+
+
