--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -9,6 +9,9 @@ body {
 }
 
 .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
@@ -30,11 +33,13 @@ body {
 }
 
 button {
+  height: 32px;
   border: none;
   border-radius: 8px;
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+
 }
 
 a {
@@ -45,4 +50,26 @@ a {
 
 ul {
   list-style-type: none;
+}
+
+.links {
+   display: flex;
+   padding-left: 10px;
+}
+
+.links a {
+   margin: 10px;
+}
+
+.left-items {
+   display: flex;
+}
+
+.right-items {
+   display: flex;
+   align-items: center;
+   width: 215px;
+   justify-content: space-between;
+   margin-right: 10px;
+   margin-left: 10px;
 }
