--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -7,7 +7,14 @@ img {
   height: 100px;
 }
 
+.text {
+  width: 200px;
+  text-align: center;
+}
+
 .title {
+  display: flex;
+  justify-content: center;
   font-size: 36px;
   font-weight: 900;
 }
@@ -23,4 +30,24 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+ul {
+  list-style-type: none;
+}
+
+/* * {
+  border: solid blue;
+} */
+
+ul li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+}
+
+.list {
+  display: flex;
+  justify-content: center;
 }
