--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+/* * {
+  border: solid blue;
+} */
+
 html, body {
   height: 100%;
 }
@@ -16,10 +20,35 @@ body {
 }
 
 .modal {
+  display: flex;
   background: white;
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  justify-content: space-between;
+}
+
+.non-icon-items {
+  display: flex;
+  flex-direction: column;
+  width: 420px;
+  margin: 10px;
+  margin-left: 0px;
+}
+
+.header-with-close {
+  display: flex;
+  font-weight: bold;
+  justify-content: space-between;
+}
+
+.header {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.text {
+  margin-bottom: 15px;
 }
 
 .icon {
@@ -33,6 +62,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 10px;
+  flex-shrink: 0;
 }
 
 .close-button {
