--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -1,29 +1,72 @@
+/* * {
+   border: solid red;
+} */
+
 body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
 }
 
+body .page-data {
+  display: flex;
+  flex-grow: 1;
+}
+
 .header {
+  display: flex;
+  align-items: center;
   height: 72px;
   background: darkmagenta;
   color: white;
-}
-
-.footer {
-  height: 72px;
-  background: #eee;
-  color: darkmagenta;
+  font-size: 25px;
+  font-weight: bold;
+  padding-left: 10px;
 }
 
 .sidebar {
-  width: 300px;
+  width: 450px;
   background: royalblue;
   box-sizing: border-box;
+}
+
+ul {
+  list-style-type: none;
+  padding-left: 10px;
+}
+
+ul a {
+  text-decoration: none;
+  color: white;
+}
+
+ul li {
+   margin-bottom: 10px;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 400px;
+  height: 400px;
+  margin: 25px;
+  padding: 15px;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 72px;
+  background: #eee;
+  color: darkmagenta;
 }
